# cr

./: .gitignore  .gitmodules  AUDITS.txt  CMakeLists.txt  README.md  UITest.json  index.html  style.css  test_map.json
data/: settings.json
data/entity/: base_human.json
data/shader/: b_char_texture_v.glsl  b_cube_texture_f.glsl  b_cube_texture_v.glsl  b_generic_simple_light_f.glsl  b_generic_simple_light_v.glsl  b_mesh_lighting_v.glsl  b_rect_texture_f.glsl  b_rect_texture_v.glsl  bone_mesh_lighting_f.glsl  bone_mesh_lighting_v.glsl  g_text_render_f.glsl  g_text_render_v.glsl
docs/: Lore.md  Reverie.md  Systems.md
src/: CR.cpp  Client.cpp  Client.hpp  Common.js  Entity.cpp  Entity.hpp  Game.hpp  Map.cpp  Map.hpp  Network.cpp  Network.hpp  Server.cpp  Server.hpp  World.cpp  World.hpp  nonsense.txt
src/Engine/: Bitmap.cpp  Bitmap.hpp  Console.cpp  Console.hpp  Font.cpp  Font.hpp  Graphics.cpp  Graphics.hpp  Indexer.cpp  Indexer.hpp  Input.cpp  Input.hpp  Job.cpp  Job.hpp  Log.cpp  Log.hpp  Model.cpp  Model.hpp  Network.cpp  Network.hpp  Resource.cpp  Resource.hpp  Result.cpp  Result.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Tools.cpp  Tools.hpp  Types.cpp  Types.hpp  _Indexer.cpp  _Indexer.hpp
src/Engine/Flexie/: Flexie.cpp  Flexie.hpp  Window.cpp
src/bj/: BitJester.cpp
src/cl/: Client.js  Renderer.js
src/cl/data/shaders/: f_shader.glsl  v_shader.glsl
